fix for navbar overlap

--- a/css/baby-shwr.css
+++ b/css/baby-shwr.css
@@ -1,3 +1,8 @@
+body {
+    position: relative;
+    top: 56px;
+}
+
 header {
   padding: 100px 0 100px;
   
